syntax = "proto3";
package raft;

option go_package = "github.com/IndraS1998/DBL/raft/raft";

service Raft{
    rpc RequestVote(RequestVoteRequest) returns (RequestVoteResponse);
}

message RequestVoteRequest{
    int32 term = 1;
    string candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteResponse{
    int32 term = 1;
    bool voteGranted = 2;
}